feat(core)：接入实时系统与 Docker 数据通道
